Fix tree layout so expand / compress / show buttons are always visible and only tree itself scrolls.  Add IDs back to each top level nav bar button, for easier testing.

--- a/static/style.css
+++ b/static/style.css
@@ -301,10 +301,6 @@ ul {
 	height: calc(100% - 38px - 25px); /* 38 = height of menu bar, 25 = height of status bar */
 }
 
-#leftPane {
-	overflow-y: auto;
-}
-
 #rightPane {
 	background-color: #bbb;
 	display: flex;
